<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_15dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/fl_factory_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_factory_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="1dp"
                android:scaleType="fitXY"
                tools:src="@drawable/test_picture" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@color/gray"
                android:padding="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12dp"
                android:text="@string/tv_city" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/favorite_button_background"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_24" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_below="@id/fl_factory_image"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20dp"
        android:textStyle="bold"
        android:text="@string/tv_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_5dp"
        android:id="@+id/ll_address"
        android:layout_below="@id/tv_title">

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_size_18dp"
        android:text="@string/tv_address" />

    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_5dp"
        android:id="@+id/ll_phone"
        android:layout_below="@id/ll_address">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_size_16dp"
            android:text="@string/tv_phone" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_phone_24" />

    </LinearLayout>



    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_phone"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:text="@string/tv_brand"
        android:textSize="@dimen/text_size_12dp"
        android:textColor="@color/light_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_brandname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="@dimen/margin_2dp"
        android:layout_below="@id/tv_brand"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16dp"
        android:text="@string/tv_brandname" />

    </RelativeLayout>